Modifications based on feedback

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "real-world-vue",
+  "name": "interactive-dnr-tool",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -16,7 +16,6 @@
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
-    "@rushstack/eslint-patch": "^1.8.0",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
     "eslint": "^8.57.0",
