--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,9 @@
 {
-  "$schema": "https://json.schemastore.org/prettierrc",
-  "semi": false,
+  "printWidth": 80,
   "tabWidth": 2,
+  "semi": true,
   "singleQuote": true,
-  "printWidth": 100,
-  "trailingComma": "none"
+  "trailingComma": "none",
+  "bracketSpacing": true,
+  "arrowParens": "always"
 }
